<resources>
    <string name="app_name">SmartCar</string>
    <string name="door">Door lock</string>
    <string name="Alarm">Alarm</string>
    <string name="Lamp">Front Lamp</string>
    <string name="Aircon">Air condition</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="empty"> </string>
    <string name="companyname">Genius Co.</string>
    <string name="fuel">Fuel</string>
    <string name="upperleft">Tire Presure 1</string>
    <string name="water">Water</string>
    <string name="upperright">Tire Presure 2</string>
    <string name="lowerleft">Tire Presure 3</string>
    <string name="lowerright">Tire Presure 4</string>
</resources>
