<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background= "#FF546CF3">

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="131dp"
        android:layout_marginTop="53dp"
        android:id="@+id/seekBar2"
        android:layout_alignParentEnd="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_alignTop="@+id/textView3"
        android:id="@+id/seekBar3"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/seekBar2" />

    <TextView
        android:text="@string/upperleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/seekBar2"
        android:layout_toStartOf="@+id/seekBar3"
        android:layout_marginEnd="34dp"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/upperright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="33dp"
        android:id="@+id/textView4"
        android:textColor="@android:color/background_light" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/seekBar3"
        android:id="@+id/seekBar4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/lowerleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="28dp"
        android:id="@+id/textView6"
        android:textColor="@android:color/background_light" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignStart="@+id/seekBar4"
        android:id="@+id/seekBar6"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/lowerright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_marginTop="25dp"
        android:id="@+id/textView7"
        android:textColor="@android:color/background_light" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignStart="@+id/seekBar6"
        android:id="@+id/seekBar8"
        android:layout_alignParentEnd="true" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_marginTop="52dp"
        android:id="@+id/seekBar9"
        android:layout_below="@+id/seekBar8"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/seekBar8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fuel_512"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="14dp"
        android:id="@+id/imageView"
        android:scaleType="fitCenter"
        android:layout_toStartOf="@+id/seekBar3"
        android:layout_above="@+id/seekBar3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/motor_oil"
        android:id="@+id/imageView2"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_below="@+id/seekBar8"
        android:layout_marginTop="16dp"
        android:layout_alignStart="@+id/textView7"
        android:layout_toStartOf="@+id/seekBar9"
        android:layout_alignEnd="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/water"
        android:id="@+id/imageView5"
        android:layout_toStartOf="@+id/seekBar9"
        android:layout_below="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="3"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/seekBar9"
        android:layout_marginTop="38dp"
        android:id="@+id/seekBar10"
        android:layout_alignParentEnd="true" />

</RelativeLayout>